[gd_scene load_steps=4 format=3 uid="uid://bx06y8b5wqdct"]

[ext_resource type="Script" path="res://Cenas/ui.gd" id="1_4usy5"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets Space Invades/font/andina.ttf" id="1_wukei"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnqnt"]
bg_color = Color(0.866667, 0.0156863, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_4usy5")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PointsLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.747445, 0.713995, 0, 1)
theme_override_fonts/font = ExtResource("1_wukei")
theme_override_font_sizes/font_size = 30
text = "Score = 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LifesContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="GameOverContainer" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GameOverContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="MarginContainer/GameOverContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0.956863, 0.470588, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_wukei")
theme_override_font_sizes/font_size = 60
text = "VOCÃŠ PERDEU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GamerOverButton" type="Button" parent="MarginContainer/GameOverContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wukei")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_jnqnt")
text = "TENTAR NOVAMENTE"

[connection signal="pressed" from="MarginContainer/GameOverContainer/VBoxContainer/GamerOverButton" to="." method="_on_gamer_over_button_pressed"]
